v0.0.1/modules/schema/pages/class/TransformerEnd.adoc
= `TransformerEnd`
:toclevels: 4


+++A conducting connection point of a power transformer. It corresponds to a physical transformer winding terminal.  In earlier CIM versions, the TransformerWinding class served a similar purpose, but this class is more flexible because it associates to terminal but is not a specialization of ConductingEquipment.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransformerEnd`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`TransformerEnd`*
 *** xref::class/PowerTransformerEnd.adoc[`PowerTransformerEnd`]
 *** xref::class/TransformerTankEnd.adoc[`TransformerTankEnd`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TransformerEnd {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}













PhaseTapChanger {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerStarImpedance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RatioTapChanger {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



BaseVoltage {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Terminal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerMeshImpedance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerMeshImpedance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerCoreAdmittance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WindingInsulation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WindingInsulation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}









TransformerEnd -> PhaseTapChanger: PhaseTapChanger


TransformerEnd -> TransformerStarImpedance: StarImpedance


TransformerEnd -> RatioTapChanger: RatioTapChanger


TransformerEnd -> BaseVoltage: BaseVoltage


TransformerEnd -> Terminal: Terminal


TransformerEnd -> TransformerMeshImpedance: ToMeshImpedance


TransformerEnd -> TransformerMeshImpedance: FromMeshImpedance


TransformerEnd -> TransformerCoreAdmittance: CoreAdmittance


TransformerEnd -> WindingInsulation: FromWindingInsulations


TransformerEnd -> WindingInsulation: ToWindingInsulations


TransformerEnd -> DiagramObject: DiagramObjects


TransformerEnd -> InstanceSet: InstanceSet


TransformerEnd -> Name: Names


TransformerEnd -> ChangeSetMember: PropertiesCIMDataObject


TransformerEnd -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<BaseVoltage,`BaseVoltage`>>
| 0..1
| xref::class/BaseVoltage.adoc[`BaseVoltage`]
| +++Base voltage of the transformer end.  This is essential for PU calculation.+++

| <<CoreAdmittance,`CoreAdmittance`>>
| 0..1
| xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]
| +++Core admittance of this transformer end, representing magnetising current and core losses. The full values of the transformer should be supplied for one transformer end only.+++

| <<PhaseTapChanger,`PhaseTapChanger`>>
| 0..1
| xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]
| +++Phase tap changer associated with this transformer end.+++

| <<RatioTapChanger,`RatioTapChanger`>>
| 0..1
| xref::class/RatioTapChanger.adoc[`RatioTapChanger`]
| +++Ratio tap changer associated with this transformer end.+++

| <<StarImpedance,`StarImpedance`>>
| 0..1
| xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]
| +++(accurate for 2- or 3-winding transformers only) Pi-model impedances of this transformer end. By convention, for a two winding transformer, the full values of the transformer should be entered on the high voltage end (endNumber=1).+++

| <<Terminal,`Terminal`>>
| 0..1
| xref::class/Terminal.adoc[`Terminal`]
| +++Terminal of the power transformer to which this transformer end belongs.+++

| <<bmagSat,`bmagSat`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Core shunt magnetizing susceptance in the saturation region.+++

| <<endNumber,`endNumber`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number for this transformer end, corresponding to the end's order in the power transformer vector group or phase angle clock number.  Highest voltage winding should be 1.  Each end within a power transformer should have a unique subsequent end number.   Note the transformer end number need not match the terminal sequence number.+++

| <<grounded,`grounded`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++(for Yn and Zn connections) True if the neutral is solidly grounded.+++

| <<magBaseU,`magBaseU`>>
| 0..1
| xref::class/Voltage.adoc[`Voltage`]
| +++The reference voltage at which the magnetizing saturation measurements were made.+++

| <<magSatFlux,`magSatFlux`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Core magnetizing saturation curve knee flux level.+++

| <<rground,`rground`>>
| 0..1
| xref::class/Resistance.adoc[`Resistance`]
| +++(for Yn and Zn connections) Resistance part of neutral impedance where 'grounded' is true.+++

| <<xground,`xground`>>
| 0..1
| xref::class/Reactance.adoc[`Reactance`]
| +++(for Yn and Zn connections) Reactive part of neutral impedance where 'grounded' is true.+++

| <<FromMeshImpedance,`FromMeshImpedance`>>
| 0..*
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'to' and other 'from' transformer ends.+++

| <<FromWindingInsulations,`FromWindingInsulations`>>
| 0..*
| xref::class/WindingInsulation.adoc[`WindingInsulation`]
| n/a

| <<ToMeshImpedance,`ToMeshImpedance`>>
| 0..*
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'from' and other 'to' transformer ends.+++

| <<ToWindingInsulations,`ToWindingInsulations`>>
| 0..*
| xref::class/WindingInsulation.adoc[`WindingInsulation`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#BaseVoltage]
=== `BaseVoltage`
+++Base voltage of the transformer end.  This is essential for PU calculation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.BaseVoltage`
| Cardinality
| 0..1
| Type
| xref::class/BaseVoltage.adoc[`BaseVoltage`]


|===

//[discrete]
[#bmagSat]
=== `bmagSat`
+++Core shunt magnetizing susceptance in the saturation region.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.bmagSat`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

//[discrete]
[#CoreAdmittance]
=== `CoreAdmittance`
+++Core admittance of this transformer end, representing magnetising current and core losses. The full values of the transformer should be supplied for one transformer end only.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.CoreAdmittance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#endNumber]
=== `endNumber`
+++Number for this transformer end, corresponding to the end's order in the power transformer vector group or phase angle clock number.  Highest voltage winding should be 1.  Each end within a power transformer should have a unique subsequent end number.   Note the transformer end number need not match the terminal sequence number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.endNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#FromMeshImpedance]
=== `FromMeshImpedance`
+++All mesh impedances between this 'to' and other 'from' transformer ends.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.FromMeshImpedance`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]


|===

//[discrete]
[#FromWindingInsulations]
=== `FromWindingInsulations`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.FromWindingInsulations`
| Cardinality
| 0..*
| Type
| xref::class/WindingInsulation.adoc[`WindingInsulation`]


|===

//[discrete]
[#grounded]
=== `grounded`
+++(for Yn and Zn connections) True if the neutral is solidly grounded.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.grounded`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#magBaseU]
=== `magBaseU`
+++The reference voltage at which the magnetizing saturation measurements were made.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.magBaseU`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

//[discrete]
[#magSatFlux]
=== `magSatFlux`
+++Core magnetizing saturation curve knee flux level.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.magSatFlux`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PhaseTapChanger]
=== `PhaseTapChanger`
+++Phase tap changer associated with this transformer end.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.PhaseTapChanger`
| Cardinality
| 0..1
| Type
| xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RatioTapChanger]
=== `RatioTapChanger`
+++Ratio tap changer associated with this transformer end.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.RatioTapChanger`
| Cardinality
| 0..1
| Type
| xref::class/RatioTapChanger.adoc[`RatioTapChanger`]


|===

//[discrete]
[#rground]
=== `rground`
+++(for Yn and Zn connections) Resistance part of neutral impedance where 'grounded' is true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.rground`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

//[discrete]
[#StarImpedance]
=== `StarImpedance`
+++(accurate for 2- or 3-winding transformers only) Pi-model impedances of this transformer end. By convention, for a two winding transformer, the full values of the transformer should be entered on the high voltage end (endNumber=1).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.StarImpedance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Terminal]
=== `Terminal`
+++Terminal of the power transformer to which this transformer end belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.Terminal`
| Cardinality
| 0..1
| Type
| xref::class/Terminal.adoc[`Terminal`]


|===

//[discrete]
[#ToMeshImpedance]
=== `ToMeshImpedance`
+++All mesh impedances between this 'from' and other 'to' transformer ends.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.ToMeshImpedance`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]


|===

//[discrete]
[#ToWindingInsulations]
=== `ToWindingInsulations`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.ToWindingInsulations`
| Cardinality
| 0..*
| Type
| xref::class/WindingInsulation.adoc[`WindingInsulation`]


|===

//[discrete]
[#xground]
=== `xground`
+++(for Yn and Zn connections) Reactive part of neutral impedance where 'grounded' is true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.xground`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===


