v1.1.0/modules/schema/pages/class/TransformerEnd.adoc
= `TransformerEnd`
:toclevels: 4


+++A conducting connection point of a power transformer. It corresponds to a physical transformer winding terminal.  In earlier CIM versions, the TransformerWinding class served a similar purpose, but this class is more flexible because it associates to terminal but is not a specialization of ConductingEquipment.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransformerEnd`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`TransformerEnd`*
 *** xref::class/PowerTransformerEnd.adoc[`PowerTransformerEnd`]
 *** xref::class/TransformerTankEnd.adoc[`TransformerTankEnd`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<BaseVoltage,`BaseVoltage`>>
//| [[slots_table.BaseVoltage]]<<BaseVoltage,`BaseVoltage`>>
| 0..1 +
xref::class/BaseVoltage.adoc[`BaseVoltage`]
| +++Base voltage of the transformer end.  This is essential for PU calculation.+++
| _n/a_

| <<CoreAdmittance,`CoreAdmittance`>>
//| [[slots_table.CoreAdmittance]]<<CoreAdmittance,`CoreAdmittance`>>
| 0..1 +
xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]
| +++Core admittance of this transformer end, representing magnetising current and core losses. The full values of the...+++
| _n/a_

| <<FromMeshImpedance,`FromMeshImpedance`>>
//| [[slots_table.FromMeshImpedance]]<<FromMeshImpedance,`FromMeshImpedance`>>
| 0..* +
xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'to' and other 'from' transformer ends.+++
| _n/a_

| <<FromWindingInsulations,`FromWindingInsulations`>>
//| [[slots_table.FromWindingInsulations]]<<FromWindingInsulations,`FromWindingInsulations`>>
| 0..* +
xref::class/WindingInsulation.adoc[`WindingInsulation`]
| _n/a_
| _n/a_

| <<PhaseTapChanger,`PhaseTapChanger`>>
//| [[slots_table.PhaseTapChanger]]<<PhaseTapChanger,`PhaseTapChanger`>>
| 0..1 +
xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]
| +++Phase tap changer associated with this transformer end.+++
| _n/a_

| <<RatioTapChanger,`RatioTapChanger`>>
//| [[slots_table.RatioTapChanger]]<<RatioTapChanger,`RatioTapChanger`>>
| 0..1 +
xref::class/RatioTapChanger.adoc[`RatioTapChanger`]
| +++Ratio tap changer associated with this transformer end.+++
| _n/a_

| <<StarImpedance,`StarImpedance`>>
//| [[slots_table.StarImpedance]]<<StarImpedance,`StarImpedance`>>
| 0..1 +
xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]
| +++(accurate for 2- or 3-winding transformers only) Pi-model impedances of this transformer end. By convention, for a two...+++
| _n/a_

| <<Terminal,`Terminal`>>
//| [[slots_table.Terminal]]<<Terminal,`Terminal`>>
| 0..1 +
xref::class/Terminal.adoc[`Terminal`]
| +++Terminal of the power transformer to which this transformer end belongs.+++
| _n/a_

| <<ToMeshImpedance,`ToMeshImpedance`>>
//| [[slots_table.ToMeshImpedance]]<<ToMeshImpedance,`ToMeshImpedance`>>
| 0..* +
xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'from' and other 'to' transformer ends.+++
| _n/a_

| <<ToWindingInsulations,`ToWindingInsulations`>>
//| [[slots_table.ToWindingInsulations]]<<ToWindingInsulations,`ToWindingInsulations`>>
| 0..* +
xref::class/WindingInsulation.adoc[`WindingInsulation`]
| _n/a_
| _n/a_

| <<bmagSat,`bmagSat`>>
//| [[slots_table.bmagSat]]<<bmagSat,`bmagSat`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Core shunt magnetizing susceptance in the saturation region.+++
| _n/a_

| <<endNumber,`endNumber`>>
//| [[slots_table.endNumber]]<<endNumber,`endNumber`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Number for this transformer end, corresponding to the end's order in the power transformer vector group or phase angle clock...+++
| _n/a_

| <<grounded,`grounded`>>
//| [[slots_table.grounded]]<<grounded,`grounded`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++(for Yn and Zn connections) True if the neutral is solidly grounded.+++
| _n/a_

| <<magBaseU,`magBaseU`>>
//| [[slots_table.magBaseU]]<<magBaseU,`magBaseU`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++The reference voltage at which the magnetizing saturation measurements were made.+++
| _n/a_

| <<magSatFlux,`magSatFlux`>>
//| [[slots_table.magSatFlux]]<<magSatFlux,`magSatFlux`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Core magnetizing saturation curve knee flux level.+++
| _n/a_

| <<rground,`rground`>>
//| [[slots_table.rground]]<<rground,`rground`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++(for Yn and Zn connections) Resistance part of neutral impedance where 'grounded' is true.+++
| _n/a_

| <<xground,`xground`>>
//| [[slots_table.xground]]<<xground,`xground`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++(for Yn and Zn connections) Reactive part of neutral impedance where 'grounded' is true.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#BaseVoltage]
=== `BaseVoltage`
+++Base voltage of the transformer end.  This is essential for PU calculation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.BaseVoltage`
| Cardinality
| 0..1
| Type
| xref::class/BaseVoltage.adoc[`BaseVoltage`]


|===

////
[.text-left]
--
<<slots_table.BaseVoltage,&#10548;>>
--
////


//[discrete]
[#bmagSat]
=== `bmagSat`
+++Core shunt magnetizing susceptance in the saturation region.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.bmagSat`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

////
[.text-left]
--
<<slots_table.bmagSat,&#10548;>>
--
////


//[discrete]
[#CoreAdmittance]
=== `CoreAdmittance`
+++Core admittance of this transformer end, representing magnetising current and core losses. The full values of the transformer should be supplied for one transformer end only.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.CoreAdmittance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]


|===

////
[.text-left]
--
<<slots_table.CoreAdmittance,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#endNumber]
=== `endNumber`
+++Number for this transformer end, corresponding to the end's order in the power transformer vector group or phase angle clock number.  Highest voltage winding should be 1.  Each end within a power transformer should have a unique subsequent end number.   Note the transformer end number need not match the terminal sequence number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.endNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.endNumber,&#10548;>>
--
////


//[discrete]
[#FromMeshImpedance]
=== `FromMeshImpedance`
+++All mesh impedances between this 'to' and other 'from' transformer ends.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.FromMeshImpedance`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]


|===

////
[.text-left]
--
<<slots_table.FromMeshImpedance,&#10548;>>
--
////


//[discrete]
[#FromWindingInsulations]
=== `FromWindingInsulations`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.FromWindingInsulations`
| Cardinality
| 0..*
| Type
| xref::class/WindingInsulation.adoc[`WindingInsulation`]


|===

////
[.text-left]
--
<<slots_table.FromWindingInsulations,&#10548;>>
--
////


//[discrete]
[#grounded]
=== `grounded`
+++(for Yn and Zn connections) True if the neutral is solidly grounded.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.grounded`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.grounded,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#magBaseU]
=== `magBaseU`
+++The reference voltage at which the magnetizing saturation measurements were made.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.magBaseU`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

////
[.text-left]
--
<<slots_table.magBaseU,&#10548;>>
--
////


//[discrete]
[#magSatFlux]
=== `magSatFlux`
+++Core magnetizing saturation curve knee flux level.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.magSatFlux`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

////
[.text-left]
--
<<slots_table.magSatFlux,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PhaseTapChanger]
=== `PhaseTapChanger`
+++Phase tap changer associated with this transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.PhaseTapChanger`
| Cardinality
| 0..1
| Type
| xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]


|===

////
[.text-left]
--
<<slots_table.PhaseTapChanger,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RatioTapChanger]
=== `RatioTapChanger`
+++Ratio tap changer associated with this transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.RatioTapChanger`
| Cardinality
| 0..1
| Type
| xref::class/RatioTapChanger.adoc[`RatioTapChanger`]


|===

////
[.text-left]
--
<<slots_table.RatioTapChanger,&#10548;>>
--
////


//[discrete]
[#rground]
=== `rground`
+++(for Yn and Zn connections) Resistance part of neutral impedance where 'grounded' is true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.rground`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.rground,&#10548;>>
--
////


//[discrete]
[#StarImpedance]
=== `StarImpedance`
+++(accurate for 2- or 3-winding transformers only) Pi-model impedances of this transformer end. By convention, for a two winding transformer, the full values of the transformer should be entered on the high voltage end (endNumber=1).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.StarImpedance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]


|===

////
[.text-left]
--
<<slots_table.StarImpedance,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Terminal]
=== `Terminal`
+++Terminal of the power transformer to which this transformer end belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.Terminal`
| Cardinality
| 0..1
| Type
| xref::class/Terminal.adoc[`Terminal`]


|===

////
[.text-left]
--
<<slots_table.Terminal,&#10548;>>
--
////


//[discrete]
[#ToMeshImpedance]
=== `ToMeshImpedance`
+++All mesh impedances between this 'from' and other 'to' transformer ends.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.ToMeshImpedance`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]


|===

////
[.text-left]
--
<<slots_table.ToMeshImpedance,&#10548;>>
--
////


//[discrete]
[#ToWindingInsulations]
=== `ToWindingInsulations`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.ToWindingInsulations`
| Cardinality
| 0..*
| Type
| xref::class/WindingInsulation.adoc[`WindingInsulation`]


|===

////
[.text-left]
--
<<slots_table.ToWindingInsulations,&#10548;>>
--
////


//[discrete]
[#xground]
=== `xground`
+++(for Yn and Zn connections) Reactive part of neutral impedance where 'grounded' is true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.xground`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.xground,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/BaseVoltage.adoc[`BaseVoltage`] | xref::class/BaseVoltage.adoc#TransformerEnds[`TransformerEnds`]



| xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`] | xref::class/PhaseTapChanger.adoc#TransformerEnd[`TransformerEnd`]



| xref::class/RatioTapChanger.adoc[`RatioTapChanger`] | xref::class/RatioTapChanger.adoc#TransformerEnd[`TransformerEnd`]



| xref::class/Terminal.adoc[`Terminal`] | xref::class/Terminal.adoc#TransformerEnd[`TransformerEnd`]



| xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`] | xref::class/TransformerCoreAdmittance.adoc#TransformerEnd[`TransformerEnd`]



| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`] | xref::class/TransformerMeshImpedance.adoc#FromTransformerEnd[`FromTransformerEnd`]



| xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`] | xref::class/TransformerStarImpedance.adoc#TransformerEnd[`TransformerEnd`]



| xref::class/WindingInsulation.adoc[`WindingInsulation`] | xref::class/WindingInsulation.adoc#ToWinding[`ToWinding`]


|===

